@@ -1,10 +1,20 @@
 
 Regina - A Normal Surface Theory Calculator
 
+    ENGINE:
+        Overall structure:
+            - Moved engine/imports to engine/foreign.
+        Class NPerm:
+            - Added toString().
+        Routine writeSnapPea():
+            - Added.
+
     JAVA USER INTERFACE:
         Overall structure:
             - Added readline/editline support using Bablok's wrapper classes.
             - Converted option REGINA_JNIDIR to a list of directories.
+        normal.exports:
+            - Added class SnapPeaExporter.
 
 Version 2.3  [ 12 December, 2001 ] - The "Farewell Stillwater" release.
     OVERALL:
